--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "Bot",
+  "name": "Pano",
   "version": "1.0.0",
-  "description": "A Twitter bot that can retweet in response to the tweets matching some particluar keyword(s)",
+  "description": "A Twitter bot that tweets you back a pano",
   "main": "bot.js",
   "dependencies": {
-    "form-data": "^2.1.2",
-    "fs": "^0.0.1",
     "gm": "^1.23.0",
     "request": "^2.79.0",
     "twit": "^2.1.1",
@@ -28,10 +26,10 @@
     "debashis",
     "barman"
   ],
-  "author": "Debashis Barman",
-  "license": "http://creativecommons.org/licenses/by-sa/3.0",
+  "author": "Casey Miller",
+  "license": "",
   "bugs": {
-    "url": "https://gist.github.com/debashisbarman/bffe0f6cd3c0fd2fe40e#file-readme-md"
+    "url": ""
   },
-  "homepage": "https://goo.gl/4whEIt"
+  "homepage": ""
 }
